site grid wireframe

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,12 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #fff5ec;
+  --foreground: #402e32;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #402e32;
+    --foreground: #fff5ec;
   }
 }
 
