--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,9 +19,21 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-sanchez), serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1,
+h2 {
+  font-family: var(--font-kameron), serif;
+}
+
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-averia), serif;
 }
 
 * {
