--- a/src/components/WhooshButton.module.css
+++ b/src/components/WhooshButton.module.css
@@ -41,6 +41,7 @@
   text-decoration: none;
   display: grid;
   position: relative;
+  border-radius: 0;
 }
 
 
@@ -62,6 +63,7 @@
   grid-area: 1 / 1;
   display: grid;
   overflow: clip;
+  border-radius: 0;
 }
 
 .buttonColorSwooshBgInner {
@@ -96,6 +98,7 @@
   display: grid;
   overflow: clip;
   position: relative;
+  border-radius: 0;
 }
 
 .buttonColorSwooshText {
