--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,17 +3,13 @@
   --foreground: #402e32;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #402e32;
-    --foreground: #fff5ec;
-  }
-}
+
 
 html,
 body {
   max-width: 100vw;
   scroll-padding-top: 80px;
+  color-scheme: light; /* Force light mode */
 }
 
 body {
@@ -47,8 +43,4 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+
